# HumanMoveMouse

./: .gitignore  DEVELOPER_GUIDE.md  README.md  architecture.md  demo.py  mouse_model.pkl  pyproject.toml  train_model.py
.claude/: settings.local.json
config/: settings.py
core/: base.py  exceptions.py  logging.py  storage.py
csv_data/: X1004Y169_X347Y654_852a085c.csv  X1004Y610_X920Y310_13341c83.csv  X1006Y213_X325Y430_3f23e854.csv  X100Y161_X811Y625_76183adc.csv  X1014Y415_X153Y236_6b26bbc6.csv  X1014Y588_X365Y324_a864fe11.csv  X1015Y164_X927Y507_84dca900.csv  X1016Y397_X616Y399_aacdfbcd.csv  X1020Y179_X979Y647_fb043b99.csv  X1020Y540_X490Y112_0210d9f1.csv  X1020Y669_X1036Y354_a05c6481.csv  X1022Y136_X1009Y720_579baa00.csv  X1025Y440_X526Y605_82015db8.csv  X1027Y699_X1108Y184_608d58b4.csv  X1028Y453_X842Y394_9fa0340b.csv  X1029Y456_X638Y304_ce342122.csv  X1031Y646_X1024Y222_f456034d.csv  X1037Y122_X949Y435_5ba24e62.csv  X1037Y673_X289Y472_23bfc46b.csv  X1038Y181_X781Y469_bef65845.csv  X1039Y709_X1128Y239_357af82f.csv  X1040Y469_X719Y659_1234ba7b.csv  X1047Y599_X971Y314_ed987e39.csv  X1049Y127_X155Y501_d0d93efb.csv  X105Y56_X839Y720_7875e084.csv  X1063Y150_X694Y207_b0b6bf93.csv  X1064Y703_X302Y111_eaf26be0.csv  X1069Y477_X830Y133_a7e84727.csv  X1076Y348_X538Y201_505f1740.csv  X1078Y396_X1114Y76_7f612b7c.csv  X1078Y554_X675Y691_87069eb4.csv  X1080Y261_X374Y668_ef11b3d2.csv  X1083Y182_X399Y571_d62e19a4.csv  X1085Y304_X893Y450_7b6ff301.csv  X1087Y419_X520Y219_dfcdf628.csv  X108Y241_X942Y633_eff65775.csv  X1090Y522_X442Y486_8473aa95.csv  X1094Y632_X269Y267_8ffdce2d.csv  (+293 more)
(+15 files in other folders)
